RESOLVED FIXED187075
Crash when _topConstraint is null in element fullscreen.
https://bugs.webkit.org/show_bug.cgi?id=187075
Summary Crash when _topConstraint is null in element fullscreen.
Jeremy Jones
Reported 2018-06-26 17:53:35 PDT
Fix crash when _topConstraint is null.
Attachments
Patch (2.42 KB, patch)
2018-06-26 17:59 PDT, Jeremy Jones
no flags
Archive of layout-test-results from ews202 for win-future (12.85 MB, application/zip)
2018-06-26 23:08 PDT, EWS Watchlist
no flags
Jeremy Jones
Comment 1 2018-06-26 17:59:29 PDT
EWS Watchlist
Comment 2 2018-06-26 23:08:32 PDT
Comment on attachment 343666 [details] Patch Attachment 343666 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8356209 New failing tests: http/tests/security/video-poster-cross-origin-crash2.html
EWS Watchlist
Comment 3 2018-06-26 23:08:43 PDT
Created attachment 343693 [details] Archive of layout-test-results from ews202 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews202 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 4 2018-06-28 11:36:56 PDT
Comment on attachment 343666 [details] Patch Clearing flags on attachment: 343666 Committed r233314: <https://trac.webkit.org/changeset/233314>
WebKit Commit Bot
Comment 5 2018-06-28 11:36:57 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-06-28 11:38:23 PDT
Note You need to log in before you can comment on or make changes to this bug.