Crash when _topConstraint is null in element fullscreen. https://bugs.webkit.org/show_bug.cgi?id=187075

Patch by Jeremy Jones <jeremyj@apple.com> on 2018-06-28
Reviewed by Eric Carlson.

NSArray can't contain a null pointer, so check for null before creating an array from a pointer.
Use the recommended +deactivateConstraints: instead of -removeConstraints:.

* UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController showUI]):
(-[WKFullScreenViewController hideUI]):

Canonical link: https://commits.webkit.org/202401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233314 268f45cc-cd09-0410-ab3c-d52691b4dbfc